BOARD18 2.5.11 Release Notes
 
Changes from 2.5.10 Release:
Implemented fix for Issue 121 - Add a search feature to "View all games" page. 

BOARD18 2.5.10 Release Notes
 
Changes from 2.5.9 Release:
Implemented fix for Issue 160 - Inadequate Game Name editing in board18New
Implemented fix for Issue 159 - Potential vulnerability to invalid user input 

BOARD18 2.5.9 Release Notes
 
Changes from 2.5.8 Release:
Implemented fix for Issue 153 "Can't view all games"
Implemented change for Issue 96 "Request for 2 new scripts".
Replaced cronCode with new aws-cli backups.
Some minor fixes to error reports and documentation.

BOARD18 2.5.8 Release Notes
 
Changes from 2.5.7 Release:
Implemented fix for Issue 132 “left margin in the player list is missing”.
Corrected links in the README.txt file.
Removed unneeded subscripts from the names of various CSS files.
Removed some left over debug code from tokenCheck.php.

BOARD18 2.5.7 Release Notes
 
Changes from 2.5.6 Release:
Implemented fix for Issue 115 “Email address is not correct” error
Added configMailTemplate.php for more secure implementation.
Fixed BD18-token-adjust.py
Made various documentation changes.

BOARD18 2.5.6 Release Notes
 
Changes from 2.5.5 Release:
Implemented fix for Issue 94 - Punctuation in game title. 
Also fixed minor player name display issue on same page.

BOARD18 2.5.5 Release Notes
 
Release 2.5.4 had to be backed out because the PHP rename() function has a
known bug that causes it to fail in certain circumstances. The rcopy()
function has been added to BOARD18 to deal with this situation.

BOARD18 2.5.4 Release Notes
 
Changes from 2.5.3 Release:
Implemented fix for Issue 91 - Problems in loadGameBox.php. 

BOARD18 2.5.3 Release Notes
 
Changes from 2.5.2 Release:
Implemented fix for Issue 89 - Problem with function in new password code. 
Implemented fix for Issue 90 - Mail sending to modern SMTP servers fail.

BOARD18 2.5.2 Release Notes
 
Changes from 2.5.1 Release: