@@ -244,11 +244,15 @@ $pagecount = ceil((float)$totalcount/(float)$pagesize);
               <label for="fname">Change First Name: </label>
               <input type="text" name="fname" id="fname" class="reg"
                      value="">
+              <label class="error" for="fname" id="fname_error">
+                This field is required.</label>
             </p>
             <p>
               <label for="lname">Change Last Name: </label>
               <input type="text" name="lname" id="lname" class="reg"
                      value="">
+              <label class="error" for="lname" id="lname_error">
+                This field is required.</label>
             </p>
             <p id="levelselect">
             </p>
