@@ -174,6 +174,9 @@ A copy of this license can be found in the LICENSE.text file.
         <form name="register" class="hideform" action="">
           <fieldset>
             <p style="font-size: 130%">Register your Player ID</p>
+            <p style="color: Fuchsia">
+              All of the fields on this form are required.
+            </p>
             <p>
               <label for="newuser">Enter Player ID:</label>
               <input type="text" name="newuser" id="newuser" class="reg">
@@ -200,14 +203,17 @@ A copy of this license can be found in the LICENSE.text file.
               <label class="error" for="email" id="email_error">
                 This field is required.</label>
             </p>
-            <p style="font-size: 130%">Optional Fields: </p>
             <p>
               <label for="fname">Enter First Name: </label>
               <input type="text" name="fname" id="fname" class="reg">
+              <label class="error" for="fname" id="fname_error">
+                This field is required.</label>
             </p>
             <p>
               <label for="lname">Enter Last Name: </label>
               <input type="text" name="lname" id="lname" class="reg">
+              <label class="error" for="lname" id="lname_error">
+                This field is required.</label>
             </p>
             <p>
               <input type="submit" name="regbutton" class="pwbutton"  
