@@ -2,6 +2,10 @@
  * The board18Map3 file contains tile and token manipulation
  * functions. These functions manipulate obects on the map board.
  *
+ * All BD18 global variables are contained in one
+ * 'master variable' called BD18.  This isolates 
+ * them from global variables in other packages
+ * 
  * Copyright (c) 2013 Richard E. Price under the The MIT License.
  * A copy of this license can be found in the LICENSE.text file.
  */
