@@ -3,10 +3,14 @@
  * A right click event on the stock chart in the Market page can 
  * cause a context menu to be displayed. Whether this menu is 
  * displayed at all and the selection of items in this menu 
- * are both dependant on the context of the event. 
+ * are both dependent on the context of the event. 
  *
  * Copyright (c) 2013 Richard E. Price under the The MIT License.
  * A copy of this license can be found in the LICENSE.text file.
+ * 
+ * All BD18 global variables are contained in one
+ * 'master variable' called BD18.  This isolates 
+ * them from global variables in other packages.
  */
 
 /*
