@@ -4,7 +4,11 @@
  * Market page and on the main and tray menues.  But right click 
  * events that cause a context menu to be displayed are handled
  * by functions in the board18Market5.js file.
- *
+ * 
+ * All BD18 global variables are contained in one
+ * 'master variable' called BD18.  This isolates 
+ * them from global variables in other packages
+ * 
  * Copyright (c) 2013 Richard E. Price under the The MIT License.
  * A copy of this license can be found in the LICENSE.text file.
  */
