@@ -13,8 +13,8 @@
 var BD18 = {};
 BD18.noteTimeout = null; // Used by doLogNote().
 BD18.welcomename = null; // Used by doLogNote().
-BD18.help = "https://wiki.board18.org/w/Player%27s_Guide_V2.5";
-BD18.version = "2.5.11";
+BD18.help = "https://wiki.board18.org/w/Player%27s_Guide_V2.6";
+BD18.version = "2.6.0";
 
 /* Function setPage() adjusts the height and width
  * of rightofpage and the height of lefttofpage.
